Add jsPDF and ngx-device-detector for print pdf function  mobile test

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/compat-data": "^7.8.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
+    "jspdf": "^1.5.3",
+    "ngx-device-detector": "^1.4.5",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
